# musicbox-v2

./: BatteryHandler.cpp  BatteryHandler.h  ButtonHandler.cpp  ButtonHandler.h  CMakeLists.txt  ContentHandler.cpp  ContentHandler.h  ContentItem.h  Dockerfile  LEDHandler.cpp  LEDHandler.h  MusicHandler.cpp  MusicHandler.h  PiZero.cmake  README.md  RFIDHandler.cpp  RFIDHandler.h  State.cpp  State.h  TagHandler.cpp  TagHandler.h  WebHandler.cpp  WebHandler.h  main.cpp
.github/workflows/: build.yml
webroot/: index.html  package-lock.json  package.json  vite.config.ts
webroot/src/: App.vue  store.ts
webroot/src/components/: BatteryComponent.vue  ContentItemComponent.vue  ContentList.vue  FileUpload.vue  MusicBox.vue  PlayerControls.vue  TagDataComponent.vue
webroot/src/router/: index.ts
webroot/src/types/: ContentItem.ts
webroot/src/views/: ContentView.vue  HomeView.vue  TagView.vue
